# activitywatch.github.io

./: .gitignore  .gitmodules  .travis.yml  CNAME  Gemfile  Makefile  README.md  _config.yml  about.md  blog.html  ci.html  ci.pug  contributors.html  donate.md  downloads.pug  feed.xml  generate_modules_yml.py  index.html  index.pug  pugtest.pug  robots.txt  screenshots.pug  sitemap.xml  sponsors.pug  stats.pug  timeline.html  timeline.js  timeline.pug
contributor-stats/: Makefile  README.md  pyproject.toml
contributor-stats/gitstats/: README.md  gitstats  sortable.js
contributor-stats/repos/ActivityWatch/activitywatch.github.io/: Gemfile  Makefile  index.html
contributor-stats/repos/ActivityWatch/aw-client-js/: package-lock.json
contributor-stats/repos/ActivityWatch/aw-client-rust/: README.md
contributor-stats/repos/ActivityWatch/aw-watcher-vscode/: package-lock.json
contributor-stats/src/contributor-stats/: github_stats.py  main.py
contributor-stats/tables/: activitywatch.github.io.html  activitywatch.html  aw-android.html  aw-client-js.html  aw-client-rust.html  aw-client.html  aw-core.html  aw-qt.html  aw-server-rust.html  aw-server.html  aw-watcher-afk.html  aw-watcher-vim.html  aw-watcher-vscode.html  aw-watcher-web.html  aw-watcher-window.html  aw-webui.html  docs.html  total.html
contributor-stats/video/: fetch-avatars.pl  gource-captions.txt  gource-output-add-music.sh  gource-output.sh
stats/: README.md  analyze_stats.py  collect_stats.py  index.html  pyproject.toml
stats/data/: chrome-weekly-users.csv  firefox-daily-users.csv  stats.csv
(+95 files in other folders)
