[tool.poetry]
name = "aw-stats"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
pandas = "*"
matplotlib = "*"
click = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
